--- a/login.html
+++ b/login.html
@@ -23,13 +23,13 @@
     </div>
     <div class="login_bar">
       <div class="twitter">
-        <img src="">
+        <img src="img/twitter-01.png">
       </div>
       <div class="facebook">
-        <img src="">
+        <img src="img/facebook-01.png">
       </div>
-      <div class="googleplus">
-        <img src="">
+      <div class="other">
+        <img src="img/facebook-01.png">
       </div>
     </div>
   </div>
