--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
       <h2>Create Profile</h2>
     </div>
     <div class="profile">
-      <h2>New Profile</h2>
+      <a href="new_pro.html"><h2>New Profile</h2></a>
     </div>
     <div class="or">
       <p>OR</p>
