--- a/new_pro.html
+++ b/new_pro.html
@@ -15,11 +15,11 @@
     <div class="create">
       <h2>New Profile</h2>
     </div>
-    <div class="phrase">
-      <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="search">
-      <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="search">
-      <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="search">
-      <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="search">
+    <div class="inputs">
+      <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="First Name">
+      <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="Last Name">
+      <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="School">
+      <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="Current City">
     </div>
   </div>
 </div>
