Page update with button

--- a/new_pro.html
+++ b/new_pro.html
@@ -21,6 +21,9 @@
       <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="School">
       <input name="searchbox" onfocus="if (this.value=='search') this.value = ''" type="text" value="Current City">
     </div>
+    <div class="button">
+      <a href="maploading.html"><button>GO</button></a>
+    </div>
   </div>
 </div>
 </body>
